<resources>
    <string name="app_name">app-gerenciamento-aulas</string>
    <string name="login">Login</string>
    <string name="clickaprenda">ClickAprenda</string>
    <string name="queremos_te_ajudar">Queremos te ajudar!</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="j_tem_uma_conta_cadastre_se">Já tem uma conta? Cadastre-se</string>
    <string name="todo">TODO</string>
    <string name="logoapp">logoApp</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="entrar">Entrar</string>
    <string name="ou_logar_com">Ou logar com</string>
    <string name="googlebtn">googleBtn</string>
    <string name="continue_com_google">Continue com Google</string>
    <string name="facebookbtn">facebookbtn</string>
    <string name="continue_com_facebook">Continue com facebook</string>
    <string name="ainda_n_o_tem_conta_cadastre_se">Ainda não tem conta? Cadastre-se</string>
    <string name="logo_click_aprenda">Logo Click Aprenda</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="googlebtn2">googlebtn2</string>
    <string name="continue_com_google2">Continue com Google</string>
    <string name="facebookbtn2">facebookbtn2</string>
    <string name="continue_com_facebook2">Continue com Facebook</string>
    <string name="ou_cadastre_se_com_e_mail">Ou cadastre-se com e-mail</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email2">Email</string>
    <string name="senha2">Senha</string>
    <string name="estou_de_acordo_com_os">Estou de acordo com os </string>
    <string name="termos_de_servi_o"> termos de serviço</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="j_tem_uma_conta_fa_a_login">Já tem uma conta? Faça login</string>
    <string name="starpng">starpng</string>
    <string name="starpng2">TODO</string>
    <string name="starpng3">starpng3</string>
    <string name="starpng4">starpng4</string>
    <string name="starpng5">starpng5</string>
    <string name="starpng6">starpng6</string>
    <string name="bem_vindo_a_n_nescolha_o_tipo_de_usu_rio_n_para_come_ar">Bem-Vindo(a)!\n\nEscolha o tipo de usuário\n para começar:</string>
    <string name="cone_professor">Ícone Professor</string>
    <string name="professor">Professor</string>
    <string name="cone_aluno">Ícone Aluno</string>
    <string name="aluno">Aluno</string>
    <string name="alunoOp">Aluno</string>
    <string name="professorOp">Professor</string>
    <string name="logo_professor">Logo Professor</string>
    <string name="data_ex_2025_05_22">Data (ex: 2025-05-22)</string>
    <string name="hora_ex_14_00">Hora (ex: 14:00)</string>
    <string name="disciplina">Disciplina</string>
    <string name="adicionar_link">Adicionar Link</string>
    <string name="salvar">Salvar</string>
    <string name="logo_do_professor">Logo do Professor</string>
    <string name="cone_de_agendamentos">Ícone de agendamentos</string>
    <string name="ver_agendamentos">Ver Agendamentos</string>
    <string name="visualize_seus_compromissos">Visualize seus compromissos</string>
    <string name="cone_de_hor_rios">Ícone de horários</string>
    <string name="gerenciar_hor_rios">Gerenciar Horários</string>
    <string name="configure_sua_disponibilidade">Configure sua disponibilidade</string>
    <string name="sair">Sair</string>
    <string name="salvar_altera_es">Salvar alterações</string>
    <string name="meus_hor_rios">Meus Horarios</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar">Voltar</string>
    <string name="data_hora">Data - Hora</string>
    <string name="editar" />
    <string name="excluir" />
    <string name="adicionar_material" />
    <string name="logo_aluno">logo_estudante</string>
    <string name="hor_rios_dispon_veis">Horários Disponíveis</string>
    <string name="icone_materiais">materiais de estudo\n</string>
    <string name="icone_minhas_aulas">minhas aulas</string>
    <string name="minhas_aulas">Minhas Aulas</string>
    <string name="materiais_de_nestudo">Materiais de\nEstudo</string>
    <string name="sair_aluno">Sair</string>
    <string name="agendamentos_ndispon_veis">Agendamentos\nDisponíveis</string>
    <string name="icone_agendamentos">agendamentos_disponiveis</string>
    <string name="logo_do_aluno">logo_aluno</string>
    <string name="ol_aluno">Olá, Aluno!</string>
    <string name="materiais_de_estudo">Materiais de\nEstudo</string>
    <string name="sair_aluno1">Sair</string>
    <string name="agendamentos_disponiveis">Agendamentos\nDisponíveis</string>
    <string name="ola_aluno">Olá, Aluno!</string>
    <string name="minhasaulas">Minhas Aulas</string>
    <string name="materiais_de_estudo_aluno">Materiais de Estudo</string>
    <string name="ver_agendamentos_dispon_veis">Ver Agendamentos disponíveis</string>
    <string name="minhassaulas">Minhas aulas</string>
    <string name="materiais_de_estudo_alun">Materiais de estudo</string>
    <string name="sair_alun">Sair</string>
    <string name="materiais_de_estudo_student">Materiais de estudo</string>
    <string name="agendamentos_dispon_veis">Agendamentos disponíveis</string>
    <string name="minhas_aulas_aluno">Minhas aulas</string>
    <string name="ola_aluno2">Olá, Aluno!</string>
</resources>