<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:padding="24dp"
    android:background="#6A1B9A">

    <ImageView
        android:id="@+id/imagemExemplo"
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:contentDescription="@string/logoapp"
        android:paddingBottom="20dp"
        android:src="@drawable/click_aprenda" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#AAAAAA"
        android:layout_marginBottom="16dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#AAAAAA"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_a_senha"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingBottom="15sp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/entrar"
        android:textColor="@color/black"
        android:layout_marginBottom="50sp"
        android:background="@drawable/rounded_edittextyellow"/>

    <TextView
        android:id="@+id/orEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="15sp"
        android:text="@string/ou_logar_com"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="DuplicateIds" />


    <LinearLayout
        android:id="@+id/google_login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/google_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/googlebtn"
            android:src="@drawable/google" />

        <TextView
            android:id="@+id/google_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/continue_com_google"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/rounded_edittextblue"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/facebookbtn"
            android:src="@drawable/facebook" />

        <TextView
            android:id="@+id/facebook_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/continue_com_facebook"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ainda_n_o_tem_conta_cadastre_se"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>
