<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#6A1B9A">

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/clickaprenda"
        android:textColor="@color/white"
        android:textSize="19sp"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imagemExemplo"
        android:layout_width="600dp"
        android:layout_height="350dp"
        android:contentDescription="@string/todo"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:src="@drawable/click_aprenda" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="140dp"
        android:layout_height="88dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20sp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="30sp"
        android:text="@string/queremos_te_ajudar"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cadastrar_se"
        android:textColor="@color/black"
        android:layout_marginBottom="18sp"
        android:background="@drawable/rounded_edittextyellow" />

    <TextView
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/j_tem_uma_conta_cadastre_se"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>
