<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutProfessor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A1B9A"
    android:padding="16dp">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/starpng"
        android:src="@drawable/star"
        android:alpha="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/starpng2"
        android:src="@drawable/star"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/starpng3"
        android:src="@drawable/star"
        android:alpha="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="100dp"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/starpng4"
        android:src="@drawable/star"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/starpng5"
        android:src="@drawable/star"
        android:alpha="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginStart="15dp"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/starpng6"
        android:src="@drawable/star"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/tvProfessorTitulo"
        android:layout_width="192dp"
        android:layout_height="139dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_do_professor"
        android:elevation="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/professor_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfessorTitulo"
        app:layout_constraintVertical_bias="0.4">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnVerAgendamentos"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:stateListAnimator="@animator/card_hover"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#6A1B9A"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/clock"
                    android:contentDescription="@string/cone_de_agendamentos"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ver_agendamentos"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visualize_seus_compromissos"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:alpha="0.8"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnGerenciarHorarios"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:stateListAnimator="@animator/card_hover"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="80dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#6A1B9A"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/clock"
                    android:contentDescription="@string/cone_de_hor_rios"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gerenciar_hor_rios"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_sua_disponibilidade"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:alpha="0.8"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btnSairProfessor"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sair"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:background="@drawable/rounded_edittextyellow"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>