<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A1B9A"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <!-- Logo do Professor -->
    <ImageView
        android:id="@+id/professorLogo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_professor"
        android:src="@drawable/professor_logo" />

    <!-- Card Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_form"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Título -->
        <TextView
            android:id="@+id/tvAgendamentoTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meus_hor_rios"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAgendamentos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:contentDescription="@string/app_name"
            android:paddingBottom="8dp"
            tools:ignore="NestedWeights" />

        <!-- Botão Adicionar -->
        <Button
            android:id="@+id/btnAdicionarHorario"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_edittextyellow"
            android:elevation="2dp"
            android:text="@string/adicionar"
            android:textColor="@color/black" />

        <!-- Botão Voltar -->
        <Button
            android:id="@+id/btnVoltarProfessor"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_edittextyellow"
            android:elevation="2dp"
            android:text="@string/voltar"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>